add exception for breaking nyquist limit

--- a/fourier/CMakeLists.txt
+++ b/fourier/CMakeLists.txt
@@ -3,4 +3,4 @@ project(fourier)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(fourier main.cpp DFT.cpp DFT.h WaveFactory.cpp WaveFactory.h)
+add_executable(fourier main.cpp DFT.cpp DFT.h WaveFactory.cpp WaveFactory.h NyquistLimitException.h)
